# plubot-backend

./: .env.example  .env.production.example  .gitignore  FACEBOOK_WEBHOOK_SETUP.md  WEBHOOK_CONFIG.md  WHATSAPP_SETUP.md  app.py  celery_tasks.py  check_constraint.py  cookies.txt  create_whatsapp_tables.py  dump.rdb  e.py  eslint.config.js  estructura_proyecto.txt  extensions.py  fix_production_fk.py  force_restart.py  get-pip.py  plubot.log.1  plubot.log.2  plubot.log.3  plubot.log.4  plubot.log.5  pyproject.toml  refresh_models.py  render.yaml  requirements.txt  requirements.txtpip  run_migration.py  run_remote_fix.py  ssh-keygen -t ed25519 -C "info@plubot.com"  ssh-keygen -t ed25519 -C "info@plubot.com".pub  verify_db.py
api/: __init__.py  actions_api.py  auth.py  chatbots.py  contact.py  conversations.py  discord_api.py  discord_integrations_api.py  flow_api.py  google_auth.py  grok.py  integrations.py  opinion.py  plubots.py  quotas.py  subscribe.py  templates.py  webhook.py  whatsapp.py  whatsapp_api.py  whatsapp_business_api.py  whatsapp_migration_api.py
backend_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: settings.py
migrations/: add_is_active_column.py  add_whatsapp_business_name.py  env.py  fix_empty_handles.py  fix_whatsapp_foreign_key.py
migrations/versions/: 001_add_whatsapp_business_tables.py  3effa7a00566_add_animated_to_flow_edges.py  5bcb53ffdd6d_add_discordintegration_model_and_.py  63442b7e59c0_revertir_plu_coins_a_plucoins.py  66adc0c69f6a_add_discord_id_and_discord_username_to_.py  71a2253ef098_add_whatsappconnection_model.py  72c9fe56150a_merge_multiple_heads.py  9736b8e4922c_add_plubot_id_column_to_knowledge_items_.py  9f0ced2eab9a_renombrar_plucoins_a_plu_coins.py  a69b6a1294e0_add_conversation_state_table.py  a7d1578a1901_initial_empty_baseline.py  add_edge_type_to_flow_edge.py  add_google_auth_columns.py  c4434d1688de_manual_sync_after_confirming_all_tables_.py  d924d76d7f78_add_color_and_powers_to_chatbots_table.py  e3533f093a7a_increase_length_flow_edge_ids_handles.py
models/: __init__.py  base.py  chatbot.py  conversation.py  conversation_state.py  discord_integration.py  flow.py  flow_edge.py  knowledge_item.py  message_quota.py  plubot.py  refresh_token.py  template.py  token_blocklist.py  user.py  whatsapp_business.py  whatsapp_connection.py
services/: __init__.py  cache_service.py  discord_action_service.py  discord_bot.py  flow_executor.py  grok_service.py  mail_service.py  twilio_service.py  whatsapp_business_service.py  whatsapp_service.py
testers/: fix_all_users.py  fix_keywords.py  fix_user.py  generar_clave.py  reset_password_test2.py  seed_knowledge_base.py  test_knowledge_base.py  test_smtp.py  verify_reset_test3.py  verify_test_user.py  verify_user.py
utils/: __init__.py  diff_utils.py  helpers.py  id_utils.py  knowledge_base.py  logging.py  security.py  templates.py  transaction_utils.py  validators.py
